--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta property="og:image" content="%sveltekit.assets%/tokkitang.jpg">
+		<meta property="og:title" content="tokkitang">
+		<meta property="og:description" content="A hot and satisfying data modeling tool like tokkitang">
+		<meta property="og:url" content="https://tokkitang.com">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
