--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 		<meta property="og:url" content="https://tokkitang.com">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<title>tokkitang</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
