--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,6 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div id="global-wrapper" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
